12-kubernetes-1.5-networking-k8s-p2/src/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              name: frontend-port
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              name: backend-port
